fixed header wrap

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -7,6 +7,7 @@
 .header {
 	display: grid;
 	grid-template: 1fr / minmax(auto, 80px) minmax(auto, 490px) minmax(auto, 345px) minmax(auto, 120px) 1fr;
+	grid-auto-rows: 0px;
 	width: 100%;
 	align-items: center;
 	color: $main-color-text;
@@ -113,7 +114,14 @@
 	}
 }
 
+// .burger__menu {
+// 	display: none;
+// }
+
 .burger__menu {
+	position: relative;
+	top: -100px;
+	z-index: -1;
 	opacity: 0;
 	visibility: hidden;
 }
